[package]
name = "carbonado-node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "carbonadod"

[features]
default = []
neon = ["blake3/neon"]
rayon = ["blake3/rayon"]

[dependencies]
anyhow = "1.0.69"
axum = "0.6.9"
axum-macros = "0.3.4"
bao = "0.12.1"
blake3 = "1.3.3"
bytes = "1.4.0"
carbonado = "0.3.0-rc.8"
chrono = "0.4.23"
clap = { version = "4.1.8", features = ["derive"] }
directories = "5.0.1"
flexi_logger = { version = "0.25.2", features = ["colors"] }
flexi_syslog = "0.5.2"
futures-util = "0.3.28"
hex = "0.4.3"
# human_bytes = "0.4.1"
# infer = "0.13.0"
log = "0.4.17"
once_cell = "1.17.1"
par-stream = { version = "0.10.2", features = ["runtime-tokio"] }
percent-encoding = { version = "2.2.0", git = "https://github.com/cryptoquick/rust-url.git", branch = "addl-percent-encode-sets" }
rand = "0.8.5"
rayon = "1.6.1"
secp256k1 = { version = "0.27.0", features = [
    "global-context",
    "rand-std",
    "bitcoin-hashes-std",
    "serde",
] }
serde = { version = "1.0.152", features = ["derive"] }
syslog = "6.0.1"
tokio = { version = "1.26.0", features = ["full"] }
toml = "0.7.2"
tower-http = { version = "0.4.0", features = ["cors"] }

# [dev-dependencies]
# serial_test = "2.0.0"
