[package]
name = "carbonado-node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "carbonadod"

[features]
default = []
neon = ["blake3/neon"]
rayon = ["blake3/rayon"]

[dependencies]
anyhow = "1.0.75"
axum = "0.7.2"
axum-macros = "0.4.0"
bao = "0.12.1"
blake3 = "1.5.0"
bytes = "1.5.0"
carbonado = "0.4.2"
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
directories = "5.0.1"
file-format = { version = "0.24.0", features = ["reader-xml"] }
flexi_logger = { version = "0.27.4", features = ["colors"] }
flexi_syslog = "0.5.3"
futures-util = "0.3.29"
hex = "0.4.3"
http = "1.0.0"
# human_bytes = "0.4.1"
infer = { version = "0.15.0", default-features = true }
log = "0.4.20"
mime = "0.3.17"
mime_guess = "2.0.4"
nom = "7.1.3"
nostr = "0.28.1"
nostr-sdk = "0.28.0"
once_cell = "1.19.0"
par-stream = { version = "0.10.2", features = ["runtime-tokio"] }
percent-encoding = { version = "2.2.0", git = "https://github.com/cryptoquick/rust-url.git", branch = "addl-percent-encode-sets" }
rand = "0.8.5"
rayon = "1.8.0"
secp256k1 = { version = "0.28.0", features = [
    "global-context",
    "rand-std",
    "serde",
] }
serde = { version = "1.0.193", features = ["derive"] }
serde_cbor = "0.11.2"
syslog = "6.1.0"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
toml = "0.8.8"
tower-http = { version = "0.5.0", features = ["cors"] }
tree_magic = "0.2.3"

# [dev-dependencies]
# serial_test = "2.0.0"
